--- a/CsLuaProjects/GrindOMeter.IntegrationTests/GrindOMeter.IntegrationTests.csproj
+++ b/CsLuaProjects/GrindOMeter.IntegrationTests/GrindOMeter.IntegrationTests.csproj
@@ -41,7 +41,7 @@
     <Reference Include="Lua">
       <HintPath>..\CsLuaConverter\Lua.dll</HintPath>
     </Reference>
-    <Reference Include="Moq, Version=4.2.1502.911, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+    <Reference Include="Moq">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\GrindOMeter.UnitTests\Moq.dll</HintPath>
     </Reference>
