Extended interfaces to include members.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -190,6 +190,7 @@
     <Compile Include="LuaVisitor\IdentifierNameVisitor.cs" />
     <Compile Include="LuaVisitor\IfStatementVisitor.cs" />
     <Compile Include="LuaVisitor\InterfaceDeclarationVisitor.cs" />
+    <Compile Include="LuaVisitor\InterfaceElementVisitor.cs" />
     <Compile Include="LuaVisitor\IOpenCloseVisitor.cs" />
     <Compile Include="LuaVisitor\IsExpressionVisitor.cs" />
     <Compile Include="LuaVisitor\LuaVisitorException.cs" />
