Most wrapping tests passing.

--- a/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
+++ b/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
@@ -71,6 +71,8 @@
     <None Include="Environment.lua" />
     <None Include="Serializer.lua" />
     <None Include="Wrapping\aa.lua" />
+    <None Include="Wrapping\IMultipleValues.lua" />
+    <None Include="Wrapping\MultipleValues.lua" />
     <None Include="Wrapping\WrappedLuaTable.lua" />
     <None Include="Wrapping\Wrapper.lua" />
   </ItemGroup>
