Changed type initializatoin to allow self references in classes as part of the base list.

--- a/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
+++ b/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <None Include="aa.lua" />
     <None Include="Environment.lua" />
+    <None Include="ISerializer.lua" />
     <None Include="Serializer.lua" />
     <None Include="Wrapping\aa.lua" />
     <None Include="Wrapping\IMultipleValues.lua" />
