--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -83,6 +83,8 @@
     <Compile Include="AmbigousMethods\EnumB.cs" />
     <Compile Include="AmbigousMethods\InterfaceB.cs" />
     <Compile Include="Generics\ClassWithGenericElements.cs" />
+    <Compile Include="Generics\ClassWithSelfInGenericInterface.cs" />
+    <Compile Include="Generics\IInterfaceWithGenerics.cs" />
     <Compile Include="Generics\MethodsWithGeneric.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="DefaultValues\AnEnum.cs" />
