Fixed issue in ValueCollection. Added new failing tests for actions and functions.

--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionsFunctions\ActionsFunctionsTests.cs" />
     <Compile Include="AmbigousMethods\AmbigousMethodsTests.cs" />
     <Compile Include="AmbigousMethods\ClassC1.cs" />
     <Compile Include="AmbigousMethods\ClassA.cs" />
