--- a/CsLuaConverter/Lua/Lua.csproj
+++ b/CsLuaConverter/Lua/Lua.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Function.cs" />
     <Compile Include="LuaMath.cs" />
     <Compile Include="NativeLuaTable.cs" />
     <Compile Include="Strings.cs" />
@@ -47,7 +48,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="aa.lua" />
+    <None Include="Function.lua" />
     <None Include="Lua.lua" />
+    <None Include="NativeLuaTable.lua" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
