Progress on type knowledge.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -114,6 +114,7 @@
     <Compile Include="CodeElementAnalysis\GenericName.cs" />
     <Compile Include="CodeElementAnalysis\GreaterThanExpression.cs" />
     <Compile Include="CodeElementAnalysis\GreaterThanOrEqualExpression.cs" />
+    <Compile Include="CodeElementAnalysis\Helpers\TypeKnowledgeHelper.cs" />
     <Compile Include="CodeElementAnalysis\IDocumentVisitor.cs" />
     <Compile Include="CodeElementAnalysis\IfStatement.cs" />
     <Compile Include="CodeElementAnalysis\ImplicitArrayCreationExpression.cs" />
