Refactored statements in the code element analysis

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -85,6 +85,7 @@
     <Compile Include="CodeElementAnalysis\ArrayCreationExpression.cs" />
     <Compile Include="CodeElementAnalysis\ArrayInitializerExpression.cs" />
     <Compile Include="CodeElementAnalysis\AsExpression.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\ExpressionStatement.cs" />
     <Compile Include="CodeElementAnalysis\AttributeArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\AttributeList.cs" />
     <Compile Include="CodeElementAnalysis\BaseConstructorInitializer.cs" />
@@ -92,7 +93,7 @@
     <Compile Include="CodeElementAnalysis\Block.cs" />
     <Compile Include="CodeElementAnalysis\BracketedArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\BracketedParameterList.cs" />
-    <Compile Include="CodeElementAnalysis\BreakStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\BreakStatement.cs" />
     <Compile Include="CodeElementAnalysis\CastExpression.cs" />
     <Compile Include="CodeElementAnalysis\CatchDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\CharacterLiteralExpression.cs" />
@@ -109,20 +110,21 @@
     <Compile Include="CodeElementAnalysis\EqualsValueClause.cs" />
     <Compile Include="CodeElementAnalysis\FalseLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\FieldDeclaration.cs" />
-    <Compile Include="CodeElementAnalysis\ForEachStatement.cs" />
-    <Compile Include="CodeElementAnalysis\ForStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\ForEachStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\ForStatement.cs" />
     <Compile Include="CodeElementAnalysis\GenericName.cs" />
     <Compile Include="CodeElementAnalysis\GreaterThanExpression.cs" />
     <Compile Include="CodeElementAnalysis\GreaterThanOrEqualExpression.cs" />
     <Compile Include="CodeElementAnalysis\Helpers\TypeKnowledgeHelper.cs" />
     <Compile Include="CodeElementAnalysis\IDocumentVisitor.cs" />
-    <Compile Include="CodeElementAnalysis\IfStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\IfStatement.cs" />
     <Compile Include="CodeElementAnalysis\ImplicitArrayCreationExpression.cs" />
     <Compile Include="CodeElementAnalysis\InterfaceDeclaration.cs" />
     <Compile Include="CodeElementAnalysis\InterfaceElement.cs" />
     <Compile Include="CodeElementAnalysis\IsExpression.cs" />
     <Compile Include="CodeElementAnalysis\LessThanExpression.cs" />
     <Compile Include="CodeElementAnalysis\LessThanOrEqualExpression.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\LocalDeclarationStatement.cs" />
     <Compile Include="CodeElementAnalysis\LogicalAndExpression.cs" />
     <Compile Include="CodeElementAnalysis\LogicalNotExpression.cs" />
     <Compile Include="CodeElementAnalysis\MethodDeclaration.cs" />
@@ -140,24 +142,21 @@
     <Compile Include="CodeElementAnalysis\PostIncrementExpression.cs" />
     <Compile Include="CodeElementAnalysis\PredefinedType.cs" />
     <Compile Include="CodeElementAnalysis\PropertyDeclaration.cs" />
-    <Compile Include="CodeElementAnalysis\ReturnStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\ReturnStatement.cs" />
     <Compile Include="CodeElementAnalysis\Scope.cs" />
-    <Compile Include="CodeElementAnalysis\SimpleAssignmentExpression.cs" />
     <Compile Include="CodeElementAnalysis\SimpleLambdaExpression.cs" />
     <Compile Include="CodeElementAnalysis\SimpleMemberAccessExpression.cs" />
-    <Compile Include="CodeElementAnalysis\Statements\Statement.cs" />
-    <Compile Include="CodeElementAnalysis\Statements\StatementException.cs" />
-    <Compile Include="CodeElementAnalysis\Statements\StatementInfo.cs" />
-    <Compile Include="CodeElementAnalysis\Statements\StatementType.cs" />
+    <Compile Include="CodeElementAnalysis\Expression.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\BaseStatement.cs" />
     <Compile Include="CodeElementAnalysis\StringLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\SubtractAssignmentExpression.cs" />
     <Compile Include="CodeElementAnalysis\SubtractExpression.cs" />
-    <Compile Include="CodeElementAnalysis\SwitchStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\SwitchStatement.cs" />
     <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
-    <Compile Include="CodeElementAnalysis\ThrowStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\ThrowStatement.cs" />
     <Compile Include="LuaVisitor\ThrowStatementVisitor.cs" />
     <Compile Include="CodeElementAnalysis\TrueLiteralExpression.cs" />
-    <Compile Include="CodeElementAnalysis\TryStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\TryStatement.cs" />
     <Compile Include="CodeElementAnalysis\TypeArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\TypeOfExpression.cs" />
     <Compile Include="CodeElementAnalysis\TypeParameter.cs" />
@@ -165,7 +164,7 @@
     <Compile Include="CodeElementAnalysis\UnaryMinusExpression.cs" />
     <Compile Include="CodeElementAnalysis\UsingDirective.cs" />
     <Compile Include="CodeElementAnalysis\VariableDeclarator.cs" />
-    <Compile Include="CodeElementAnalysis\WhileStatement.cs" />
+    <Compile Include="CodeElementAnalysis\Statements\WhileStatement.cs" />
     <Compile Include="ConverterException.cs" />
     <Compile Include="AddOnConstruction\IDeployableAddOn.cs" />
     <Compile Include="AddOnConstruction\LuaAddOn.cs" />
