--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -159,6 +159,10 @@
     <Compile Include="CodeElementAnalysis\Statements\SwitchStatement.cs" />
     <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
     <Compile Include="CodeElementAnalysis\Statements\ThrowStatement.cs" />
+    <Compile Include="CodeTree\CodeTreeBranch.cs" />
+    <Compile Include="CodeTree\CodeTreeLeaf.cs" />
+    <Compile Include="CodeTree\CodeTreeNode.cs" />
+    <Compile Include="CodeTree\SyntaxExtension.cs" />
     <Compile Include="LuaVisitor\ThrowStatementVisitor.cs" />
     <Compile Include="CodeElementAnalysis\TrueLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\Statements\TryStatement.cs" />
